option java_package = "nta.engine.cluster";
option java_outer_classname = "LeafServerStatusProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message ServerStatusProto {
	message System {
		required int32 availableProcessors = 1;
		required int64 freeMemory = 2;
		required int64 maxMemory = 3;
		required int64 totalMemory = 4;
	}
	message Disk {	
		required string absolutePath = 1;
		required int64 totalSpace = 2;
		required int64 freeSpace = 3;
		required int64 usableSpace = 4;
	}
	required System system = 1;
	repeated Disk disk = 2;
}

